--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -1,78 +1,77 @@
 .carousel {
-    padding: 0 clamp(2rem , 3vw, 3.75rem);
-    color: white;
-    margin-bottom: 5rem;
+  padding: 0 clamp(2rem, 3vw, 3.75rem);
+  color: white;
+  margin-bottom: 5rem;
 
-    .arrow {
-        position: absolute;
-        transform: scale(2);
-        top: 43%;
+  .arrow {
+    position: absolute;
+    transform: scale(2);
+    top: 43%;
 
-        &:hover {
-            color: gray;
+    &:hover {
+      color: gray;
+    }
+  }
+
+  .prev {
+    left: clamp(-1.8rem, 3vw, -3.75rem);
+  }
+
+  .next {
+    right: clamp(-1.8rem, 3vw, -3.75rem);
+  }
+
+  .title {
+    margin: 1rem 0.5rem;
+    font-size: 2rem;
+    text-shadow: #000 0 0 10px;
+  }
+
+  .slider-container {
+    cursor: pointer;
+
+    .slide {
+      position: relative;
+      display: flex !important;
+      align-items: center;
+      justify-content: center;
+
+      .button-box {
+        display: none;
+      }
+
+      .image {
+        width: 100%;
+        padding: 0 2px;
+        transition: transform 0.3s;
+        border-radius: 7px;
+      }
+
+      &:hover {
+        .image {
+          opacity: 0.3;
         }
-    }
 
-    .prev {
-        left: clamp(-1.8rem, 3vw, -3.75rem);
-    }
+        .button-box {
+          transform: scale(3);
+          display: block;
+          position: absolute;
 
-    .next {
-        right: clamp(-1.8rem, 3vw, -3.75rem);
-    }
-
-    .title {
-        margin: 1rem .5rem;
-        font-size: 2rem;
-        text-shadow: #000 0 0 10px;
-    }
-
-    .slider-container {
-        cursor: pointer;
-
-        .slide {
-            position: relative;
-            display: flex !important;
-            align-items: center;
-            justify-content: center;
-
-            .button-box {
-                display: none;
-            }
-
-            .image {
-                width: 100%;
-                padding: 0 2px;
-                transition: transform .3s;
-                border-radius: 7px;
-            }
+          .play {
+            margin-right: 5px;
 
             &:hover {
-                .image {
-                    opacity: .3;
-                }
-
-                .button-box {
-                    transform: scale(3);
-                    display: block;
-                    position: absolute;
-
-                    .play {
-                        margin-right: 5px;
-
-                        &:hover {
-                            opacity: .6;
-                        }
-                    }
-
-                    .info {
-                        &:hover {
-                            opacity: .6;
-                        }
-                    }
-                }
+              opacity: 0.6;
             }
-            
-        }  
+          }
+
+          .info {
+            &:hover {
+              opacity: 0.6;
+            }
+          }
+        }
+      }
     }
+  }
 }
