add info to login page

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -54,6 +54,12 @@
           padding: 16px 20px;
         }
 
+        .warning {
+          color: white;
+          font-size: 18px;
+          font-weight: 300;
+        }
+
         .sign-in {
           margin-top: 16px;
           margin-bottom: 30px;
